Fixed select map error and scrollbar

--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -146,7 +146,7 @@ html, body {
 	height: 8px;
 	background-color: var(--darkblue-gray); 
 }
-.table-entries::-webkit-scrollbar-thumb .wsidebar::-webkit-scrollbar-thumb {
+.table-entries::-webkit-scrollbar-thumb, .wsidebar::-webkit-scrollbar-thumb {
 	width: 5px;
 	height: 8px;
 	background-color: var(--blue-gray); 
